Atualização Readme e versão

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cover-image-crawler",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Capture the mais image of url's, worken with various sites of notices and videos(thumbnail)\u001b[D\u001b[C.",
   "main": "index.js",
   "scripts": {
@@ -20,6 +20,7 @@
   "keywords": [
     "image",
     "crawler",
+    "scraping",
     "cover",
     "thumbnail",
     "capture",
